--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,21 @@
-name: Python 3.8
+name: Python compatible for Git Actions
+
 on: [push]
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8.12
+    - name: Set up Python 3.10.6
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8.12
+        python-version: 3.10.6
     - name: Install dependencies
       run: |
         make install
-    - name: Lint
+    - name: Lint with pylint
       run: |
         make lint
-    - name: Test
-      run: |
-        make test
-  
