--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-ipython
 pytest
 pylint
 click
-matplotlib
-pandas
-fastapi
 databricks
 databricks-cli
+ipython
 databricks-sql-connector
 databricks-connect==10.4.*
+fastapi
+uvicorn[standard]
+jupyter
+s3fs
+bokeh
+streamlit
