--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,8 +40,7 @@
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"github.copilot",
-				"ms-vscode.makefile-tools",
-				"ms-dotnettools.csharp"
+				"ms-vscode.makefile-tools"
 			]
 		}
 	},
