--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ databricks-cli
 ipython
 databricks-sql-connector
 databricks-connect==10.4.*
-seaborn
-dask 
-black
-dask[all]
+fastapi
+uvicorn[standard]
+dask
 dask[distributed]
+jupyter
+s3fs
+bokeh
+streamlit
